<resources>
    <string name="app_name">QuotationShake</string>
    <string name="button1">GET QUOTATIONS</string>
    <string name="button2">FAVOURITE QUOTATIONS</string>
    <string name="button3">SETTINGS</string>
    <string name="button4">ABOUT</string>

    //About
    <string name="aboutUs"><p align="center">Quotation Shake by \n Joanna Pudelko \n Pawel Maslowski \n\n joapu@inf.upv.es \n pamas@inf.upv.es \n\n 2019</p></string>

    //Generate quotation
    <string name="getQuote">Hello %1$s!\nPress Refresh to get a new quotation!</string>
    <string name="refreshQuote">“Be the change that you wish to see in the world.” </string>
    <string name="author" translatable="false">Mahatma Gandhi</string>
    <string name="authorButton">AUTHOR INFO </string>
    <string name="settings">Settings </string>
    <string name="nameTitle">Name that identifies the user </string>
    <string name="textLanguage">Quotations will be received in the selected language </string>
    <string name="defaultUsername">Nameless One</string>

    //Settings
    <string name="insertUserName">Insert your name </string>
    <string-array name="chooseLanguage">
        <item>English</item>
        <item>Polish</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>German</item>
        <item>German</item>
        <item>Ukrainian</item>
    </string-array>

    <string name="radioTitle">Web requested will be performed using the selected HTTP method </string>
    <string name="getRadioButton">GET </string>
    <string name="postRadioButton">POST </string>
    <string name="favQ">Favourite quotations</string>
    <string name="randQ">Random quotations</string>
    <string name="aboutLabel">About</string>
    <string name="qS">Quotation Shake</string>
    <string name="refresh_button">refresh button</string>
    <string name="unknownAuthorInfo">It is impossible to find more information about the quatation author - he/she is unknown</string>
    <string name="deleteConfirmation">Are you sure that you want to delete this quotation?</string>
    <string name="deleteAllConfirmation">Are you sure that you want to delete ALL your favourte quotations?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_to_favourites">Add</string>
    <string name="get_new_q">Refresh</string>
    <string name="clear_all">Clear All</string>
    <string name="title_activity_settings">Settings</string>
    <string name="username">username</string>
    <string name="language">language</string>
    <string name="requestMethod">requestMethod</string>
    <string name="userName">User name</string>
    <string name="quotationLanguage">Quotation language</string>
    <string name="httpMethod">HTTP requested method</string>
    <string name="databaseTittle">Database access method</string>
    <string name="databaseSummary">Database will be accessed following the selected method</string>
    <string name="webServices">Web services</string>
    <string name="databaseTittle2">Database</string>
    <string name="searchWiki">https://en.wikipedia.org/wiki/Special:Search?search=</string>


</resources>
