<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:key="@string/username" android:title="@string/userName" android:summary="@string/nameTitle" ></EditTextPreference>

    <PreferenceCategory android:title="@string/webServices">
        <ListPreference android:title="@string/quotationLanguage" android:summary="@string/textLanguage" android:entries="@array/languages" android:entryValues="@array/languages" android:key="@string/language"></ListPreference>

        <ListPreference android:title="@string/httpMethod" android:summary="@string/radioTitle" android:entries="@array/requestType" android:entryValues="@array/requestType" android:key="@string/requestMethod"></ListPreference>
    </PreferenceCategory>

    <PreferenceCategory android:key="data_method" android:title="@string/databaseTittle2">
        <ListPreference android:title="@string/databaseTittle" android:summary="@string/databaseSummary" android:entries="@array/requestMethod" android:entryValues="@array/requestType" android:key="databaseMethod"></ListPreference>

    </PreferenceCategory>

</PreferenceScreen>